# IRONCLAD_THESIS

./: README.md  binarized_descend.py  connection_test.py  cost_function_plot.py  fit_gaussian.py  frames.gv  gradient_descend_display.py  spline_test.py  trajectory.yaml
devel/: .catkin  .rosinstall
devel/lib/ackermann_simulation/: pose_to_tf  target_spawner  teleop
devel/lib/brain/: commander
devel/lib/pkgconfig/: ackermann_simulation.pc  brain.pc  control.pc  embedded_system.pc  informatics.pc  robot_pose_publisher.pc
devel/lib/robot_pose_publisher/: robot_pose_publisher
devel/share/ackermann_simulation/cmake/: ackermann_simulationConfig.cmake
devel/share/brain/cmake/: brainConfig.cmake
devel/share/control/cmake/: controlConfig.cmake
devel/share/embedded_system/cmake/: embedded_systemConfig.cmake
devel/share/informatics/cmake/: informaticsConfig.cmake
devel/share/robot_pose_publisher/cmake/: robot_pose_publisherConfig.cmake
launchers/: package.xml
launchers/src/: simple_launch.launch
src/ackermann_simulation/: CMakeLists.txt  package.xml
src/ackermann_simulation/config/: ironclad_controllers.yaml
src/ackermann_simulation/include/: command_publishers.hpp
src/ackermann_simulation/include/ackermann_simulation/: command_publishers.hpp
src/ackermann_simulation/launch/: launch_sim.launch
src/ackermann_simulation/rviz/: ironclad_sim.rviz
src/ackermann_simulation/sdf/: trajectory_world.sdf
src/ackermann_simulation/src/: command_publishers.cpp  pose_to_tf.cpp  target_indicator.cpp  target_spawner.cpp  teleop.cpp  teleop_p.py  world_generator.py
src/ackermann_simulation/urdf/: ackermann_car.urdf.xacro  car_model_small.txt  target.urdf.xacro
src/ackermann_simulation/xml/: target.xml
src/brain/: CMakeLists.txt  package.xml
src/brain/src/: command_transmitter.cpp  commander.cpp  trajectory_loader.cpp
src/brain/utils/: trajectory_generator.py  trajectory_test.csv  trajectory_test2.csv
src/control/: CMakeLists.txt
src/control/include/control/: lateral.hpp  mpc.hpp  pure_pursuit.hpp
src/control/src/: lateral.cpp  mpc.cpp  pure_pursuit.cpp
src/embedded_system/: CMakeLists.txt
src/informatics/: CMakeLists.txt  package.xml
src/informatics/data/: LAT_time_log.txt  MPC_time_log.txt  PP_means.txt  PP_time_log.txt  shit.py
src/informatics/pose_sequences/: LAT_TRAJ.csv  MPC_TRAJ.csv  PLAN.csv  PLANloops.csv  PLANoriginal.csv  PLANpoutsa_xrak.csv  PLANright_turn_test.csv  PLANsharp.csv  PLANspace.csv  PLANtest_trajectory.csv  PLANtestspline.csv  PLANturn_impossible.csv  PLANturn_open.csv  PP_TRAJ.csv  PP_TRAJ_ANAL.csv
src/informatics/src/: LAT_TRAJ.csv  MPC_TRAJ.csv  PLAN.csv  PP_TRAJ.csv  path_generator.py  plotter.py  trajectory_generator.py
